k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gateway-service.apps.rm1.0a51.p1.openshiftapps.com  # Change this to your desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service  # The service name to route traffic to
            port:
              number: 8080      # The port on which the service is listening
